# porkbun-ddns

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml.example
.cargo/: config
src/: main.rs
src/config/: config.rs  mod.rs
src/porkbun/: client.rs  mod.rs  requests.rs  responses.rs
