[package]
name = "porkbun-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
porkbun-rs = "0.1.0"
eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
clap = { version = "4.0.29", features = ["derive"] }
